added earbuds page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">laptop</a></li>
-              <li><a class="dropdown-item" href="#">Earbuds</a></li>
+              <li><a class="dropdown-item" href="./earbuds.html">Earbuds</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
