--- a/login-form.html
+++ b/login-form.html
@@ -18,18 +18,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="./login-form.html">Login</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Products
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">laptop</a></li>
-                  <li><a class="dropdown-item" href="#">Earbuds</a></li>
+                  <li><a class="dropdown-item" href="./laptop.html">laptop</a></li>
+                  <li><a class="dropdown-item" href="./earbuds.html">Earbuds</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">help</a></li>
                 </ul>
