--- a/earbuds.html
+++ b/earbuds.html
@@ -74,6 +74,7 @@
         <span class="fs-5 ">
           D4 TWS,Rich Bass,50H Playtime,AI ENC,Low Latency,13mm,5.3 BT Bluetooth Headset  (Black, True Wireless)
           <br> ₹899 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -88,6 +89,7 @@
         <span class="fs-5 ">
           Battery Display, 40ms Latency, Quad Mic ENC, 40 Hr Battery, v5.3 Bluetooth Headset  (Black, True Wireless)
           <br> ₹999 <br> <del> ₹3,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -101,6 +103,7 @@
         </h4>
         <span class="fs-5 ">
           Quad Mic ENC, 10mm Driver, Ear Sensor, 48Hours Playtime Bluetooth Headset  (Black, True Wireless)                                                                                                                           <br> ₹799 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -115,6 +118,7 @@
         <span class="fs-5 ">
           up to 28 Hours Playback & AI ENC for Calls Bluetooth Headset  (Black, True Wireless)
           <br> ₹1,499 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
