--- a/index.html
+++ b/index.html
@@ -65,26 +65,26 @@
 
     <div class="row ">
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop1.webp">
         <h4>CHUWI Intel Core i3 10th Gen 1005G1</h4>
         <span class="fs-5 ">(8 GB/512 GB SSD/Windows 11 Home) CoreBook X Grey Laptop (14 inch, Grey, 1.40
-          kg)<br>₹24,990<br> <del>₹49,990</del></span>
+          kg)<br>₹24,990<br> <del>₹49,990</del> &nbsp; <span class="badge bg-primary">50% off</span> </span>
 
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop2.webp">
         <h4>HP 2023 AMD Ryzen 3 Dual Core 3250U</h4>
         <span class="fs-5 "> (8 GB/512 GB SSD/Windows 11 Home) 15s- eq1580AU Thin and Light Laptop (15.6 Inch, Natural
-          Silver, 1.69 Kg, With MS Office)<br>₹37,990 <br> <del>₹56,260</del></span>
+          Silver, 1.69 Kg, With MS Office)<br>₹37,990 <br> <del>₹56,260</del> &nbsp; <span class="badge bg-primary">50% off</span> </span>
 
 
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop3.webp">
         <h4>walker Intel Celeron Dual Core N4020</h4>
@@ -93,17 +93,18 @@
                 (4 GB/128 GB SSD/Windows 11 Home) NU14A1 Thin and Light Laptop (14.1 inch, Cloud Silver, 1.3 Kg)
 
                 <br>₹12,990 <br> <del>₹30000</del>
-        
+                &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop4.webp">
         <h4>HP 14s Intel Core i3 11th Gen 1115G4 </h4>
         <span class="fs-5 "> (8 GB/512 GB SSD/Windows 11 Home) 14s - dy2508TU Thin and Light Laptop (14 inch, Natural
           Silver, 1.41 kg, With MS Office)
           <br>₹37,990 <br> <del>₹56,260</del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -127,6 +128,7 @@
         <span class="fs-5 ">
           D4 TWS,Rich Bass,50H Playtime,AI ENC,Low Latency,13mm,5.3 BT Bluetooth Headset  (Black, True Wireless)
           <br> ₹899 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -141,6 +143,7 @@
         <span class="fs-5 ">
           Battery Display, 40ms Latency, Quad Mic ENC, 40 Hr Battery, v5.3 Bluetooth Headset  (Black, True Wireless)
           <br> ₹999 <br> <del> ₹3,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -154,6 +157,7 @@
         </h4>
         <span class="fs-5 ">
           Quad Mic ENC, 10mm Driver, Ear Sensor, 48Hours Playtime Bluetooth Headset  (Black, True Wireless)                                                                                                                           <br> ₹799 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
@@ -168,6 +172,7 @@
         <span class="fs-5 ">
           up to 28 Hours Playback & AI ENC for Calls Bluetooth Headset  (Black, True Wireless)
           <br> ₹1,499 <br> <del> ₹2,999 </del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
