--- a/laptop.html
+++ b/laptop.html
@@ -65,26 +65,26 @@
 
     <div class="row ">
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop1.webp">
         <h4>CHUWI Intel Core i3 10th Gen 1005G1</h4>
         <span class="fs-5 ">(8 GB/512 GB SSD/Windows 11 Home) CoreBook X Grey Laptop (14 inch, Grey, 1.40
-          kg)<br>₹24,990<br> <del>₹49,990</del></span>
+          kg)<br>₹24,990<br> <del>₹49,990</del> &nbsp; <span class="badge bg-primary">50% off</span> </span>
 
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop2.webp">
         <h4>HP 2023 AMD Ryzen 3 Dual Core 3250U</h4>
         <span class="fs-5 "> (8 GB/512 GB SSD/Windows 11 Home) 15s- eq1580AU Thin and Light Laptop (15.6 Inch, Natural
-          Silver, 1.69 Kg, With MS Office)<br>₹37,990 <br> <del>₹56,260</del></span>
+          Silver, 1.69 Kg, With MS Office)<br>₹37,990 <br> <del>₹56,260</del> &nbsp; <span class="badge bg-primary">50% off</span> </span>
 
 
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop3.webp">
         <h4>walker Intel Celeron Dual Core N4020</h4>
@@ -93,17 +93,18 @@
                 (4 GB/128 GB SSD/Windows 11 Home) NU14A1 Thin and Light Laptop (14.1 inch, Cloud Silver, 1.3 Kg)
 
                 <br>₹12,990 <br> <del>₹30000</del>
-        
+                &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
       </div>
 
-      <div class="col rounded bg-secondary text-white lh-1 m-4">
+      <div class="col rounded bg-secondary text-white lh-1 m-4 pb-3">
 
         <img class="m-3 rounded img-height" src="./images/laptop4.webp">
         <h4>HP 14s Intel Core i3 11th Gen 1115G4 </h4>
         <span class="fs-5 "> (8 GB/512 GB SSD/Windows 11 Home) 14s - dy2508TU Thin and Light Laptop (14 inch, Natural
           Silver, 1.41 kg, With MS Office)
           <br>₹37,990 <br> <del>₹56,260</del>
+          &nbsp; <span class="badge bg-primary">50% off</span>
         </span>
 
       </div>
